# http_server_built_using_rust

./: Cargo.toml  Readme.adoc
public/: api.html  hello.html  style.css  test.html
src/: main.rs  security.rs  server.rs  website_handler.rs
src/http/: mod.rs  query_string.rs  request.rs  response.rs  status_code.rs
