[package]
name = "rust-server"
version = "0.2.0"
authors = ["arkenstone <selrach999@gmail.com>"]
edition = "2021"
description = "A secure HTTP server built with Rust using rate limiting, security headers, and path validation"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"